# HTA2209v2

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.json
src/hta2209/: __init__.py  controller.py  detector.py  gui.py
src/hta2209/config/: settings.json
tests/: hardware_test.py  l298n_no_pwm_test.py  software_test.py  test1.py  test2.py
tests/config/: settings.json
